<resources>
    <string name="app_name">ProgressDialog</string>
    <string name="please_wait">Please Wait...</string>
    <string name="sunset">Sunset</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
</resources>